Containers/l7/prometheus-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: monitoring
spec:
  serviceName: prometheus-service
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      terminationGracePeriodSeconds: 10
      containers:
        - name: prometheus-k8s
          image: prom/prometheus:v2.19.2
          # env:
          #   - name: psconfig
          #     value: /etc/prometheus
          ports:
            - name: prom-port
              protocol: TCP
              containerPort: 9090
          # livenessProbe:
          #   exec:
          #     command: ["prometheusctl", "status"]
          #   initialDelaySeconds: 60
          #   periodSeconds: 60
          #   timeoutSeconds: 15
          # readinessProbe:
          #   exec:
          #     command: ["prometheusctl", "status"]
          #   initialDelaySeconds: 20
          #   periodSeconds: 60
          #   timeoutSeconds: 10
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
            - name: data
              mountPath: /prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-conf
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - weight: 100
      #         podAffinityTerm:
      #           labelSelector:
      #             matchExpressions:
      #               - key: app
      #                 operator: In
      #                 values:
      #                   - prometheus
      #           topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: csi-ceph-hdd-gz1
